writing objects with Java NIO